# pricepilot-app

./: .env.example  .gitignore  .yamllint.yml  CLAUDE.md  Makefile  PLANNING.md  README.md  WORKFLOW.md  docker-compose.yml  lefthook.yml
.github/workflows/: ci.yml
docs/adr/: 001-architecture-overview.md
services/price-service/: alembic.ini  pyproject.toml
services/price-service/alembic/: env.py
services/price-service/alembic/versions/: 2026_03_03_6ce4f0f72221_add_products_table.py  2026_03_05_f007d8a2d917_add_prices_table.py
services/price-service/src/price_service/: config.py  database.py  main.py
services/price-service/src/price_service/models/: price.py  product.py
services/price-service/src/price_service/routers/: prices.py  products.py
