[project]
name = "price-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # FastAPI is the web framework. It handles routing, request parsing,
    # response serialisation, and generates OpenAPI docs automatically.
    "fastapi>=0.115.0",
    # Uvicorn is the ASGI server that runs the FastAPI app.
    # [standard] includes extras for better performance (uvloop, httptools).
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
# Dev dependencies are only installed in development, not in the Docker image.
# pytest runs tests. httpx is required by FastAPI's TestClient.
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
# pytest looks for tests in the tests/ directory by default.
testpaths = ["tests"]
